# cg2all.devel

./: .gitignore  .gitmodules  README.md  calc_geometry.py  environment.yml  out_0.npz  pyproject.toml  requirements.txt
data/: martini.top  martini2.top  primo.top  rigid_body_transformation_between_frames.json  rigid_body_transformation_between_frames_C.json  rigid_body_transformation_between_frames_E.json  rigid_body_transformation_between_frames_H.json  rigid_groups.json  rigid_groups_C.json  rigid_groups_E.json  rigid_groups_H.json  torsion_energy_terms.json  torsion_energy_terms_C.json  torsion_energy_terms_E.json  torsion_energy_terms_H.json
lib/: check_rigid_groups.py  create_pdblist.py  generate_rigid_body.py  get_ic_from_structure.py  libcg.py  libconfig.py  libcryoem.py  libdata.py  liblayer.py  libloss.py  libloss_l1.py  libloss_l2.py  libmd.py  libmetric.py  libmodel.py  libnorm.py  libpdb.py  libpdbname.py  libquat.py  libse3.py  libter.py  numpy_basics.py  pdbfile.patch  process_pdb.py  residue_constants.py  residue_constants_base.py  rigid_body_transformation_between_frames.json  rigid_groups.json  snippets.py  test.py  test_pl.py  torch_basics.py
pdb/: errorlist  pdblist
pdb.6k/: targets.excluded
pdb.pisces/: transform.npy
pdb.processed/: loss_test  pdblist  targets.train  targets.valid
script/: augment+FLIP.py  augment.py  calc_geometry.py  convert_all2cg.py  convert_cg2all.py  cryo_em_minimizer.py  debug.py  eval_geometry.py  get_feature_normalization.py  md_simulator.py  minimize_structure.py  plot_geometry.py  process_pdb.py  sbatch.py  (+6 more)
(+14 files in other folders)
